--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "schnell",
   "version": "0.0.1",
   "description": "Schnell - The Node Shell: Modern, Cross-Platform, Intuitive Shell",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "main": "./dist/schnell.js",
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Larisho/Schnell.git"
