added functionality for CD Command only

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "description": "Schnell - The Node Shell: Modern, Cross-Platform, Intuitive Shell",
   "main": "./dist/schnell.js",
-  "scripts": {},
+  "scripts": {
+    "start": "node dist/schnell.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Larisho/Schnell.git"
@@ -24,5 +26,8 @@
   "bin": {
     "schnell": "./dist/schnell.js",
     "shn": "./dist/schnell.js"
+  },
+  "dependencies": {
+    "shelljs": "^0.7.6"
   }
 }
