--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "shn": "./dist/schnell.js"
   },
   "dependencies": {
-    "colors": "^1.1.2",
+    "chalk": "^1.1.3",
     "shelljs": "^0.7.6"
   }
 }
