--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "schnell",
-  "version": "0.0.5",
+  "version": "0.0.7",
   "description": "Schnell - The Node Shell: Modern, Cross-Platform, Intuitive Shell",
   "main": "./dist/schnell.js",
   "scripts": {
-    "start": "node dist/schnell.js"
+    "start": "node dist/schnell.js",
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -30,5 +31,9 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "shelljs": "^0.7.6"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.4.1"
   }
 }
