--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "clear": "0.0.1",
-    "shelljs": "^0.7.6"
+    "shelljs": "^0.7.6",
+    "yargs": "^8.0.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
